INT-21346 theme_snap: Fixed the styles so that the subsection collapse and expand button actually works

--- a/scss/_course.scss
+++ b/scss/_course.scss
@@ -1097,6 +1097,12 @@ body.format-singleactivity {
 
 .activity.subsection .section .section-item {
     padding: unset;
+
+    .content.course-content-item-content {
+        &.collapse:not(.show) {
+            display: none;
+        }
+    }
 }
 
 // -------------------------
